--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oqt-filter",
   "version": "0.0.0",
-  "description": "",
+  "description": "tile-reduce job that filters osmqatiles and enhances it with external data",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
