--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tile-reduce": "^3.1.1",
-    "turf": "^2.0.2"
+    "tile-reduce": "^3.1.1"
   }
 }
